// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"deleteOriginalAssets" option should delete original assets and keep source maps with option "keep-source-map": assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.1c2911c7c819fc826fb7.js",
    133,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 133,
    },
  ],
  Array [
    "main.91a583805a3f414213e7.js",
    3999,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3999,
    },
  ],
  Array [
    "main.91a583805a3f414213e7.js.map",
    12834,
    Object {
      "development": true,
      "size": 12834,
    },
  ],
]
`;

exports[`"deleteOriginalAssets" option should delete original assets and keep source maps with option "keep-source-map": errors 1`] = `Array []`;

exports[`"deleteOriginalAssets" option should delete original assets and keep source maps with option "keep-source-map": warnings 1`] = `Array []`;

exports[`"deleteOriginalAssets" option should work and delete original assets: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js.gz",
    133,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 133,
    },
  ],
  Array [
    "main.a6299e4b54bcb458b330.js.gz",
    3957,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3957,
    },
  ],
]
`;

exports[`"deleteOriginalAssets" option should work and delete original assets: errors 1`] = `Array []`;

exports[`"deleteOriginalAssets" option should work and delete original assets: warnings 1`] = `Array []`;

exports[`"deleteOriginalAssets" option should work and do not report errors on duplicate assets when original assets were removed: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js",
    133,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 133,
    },
  ],
  Array [
    "main.a6299e4b54bcb458b330.js",
    3957,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3957,
    },
  ],
]
`;

exports[`"deleteOriginalAssets" option should work and do not report errors on duplicate assets when original assets were removed: errors 1`] = `Array []`;

exports[`"deleteOriginalAssets" option should work and do not report errors on duplicate assets when original assets were removed: warnings 1`] = `Array []`;

exports[`"deleteOriginalAssets" option should work and keep original assets by default: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js",
    193,
    Object {
      "chunkhash": "9325220d444b0d653c03",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.9325220d444b0d653c03.js.gz",
      },
      "size": 193,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js.gz",
    133,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 133,
    },
  ],
  Array [
    "main.a6299e4b54bcb458b330.js",
    15829,
    Object {
      "chunkhash": "a6299e4b54bcb458b330",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.a6299e4b54bcb458b330.js.gz",
      },
      "size": 15829,
    },
  ],
  Array [
    "main.a6299e4b54bcb458b330.js.gz",
    3957,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3957,
    },
  ],
]
`;

exports[`"deleteOriginalAssets" option should work and keep original assets by default: errors 1`] = `Array []`;

exports[`"deleteOriginalAssets" option should work and keep original assets by default: warnings 1`] = `Array []`;

exports[`"deleteOriginalAssets" option should work and keep original assets: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js",
    193,
    Object {
      "chunkhash": "9325220d444b0d653c03",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.9325220d444b0d653c03.js.gz",
      },
      "size": 193,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js.gz",
    133,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 133,
    },
  ],
  Array [
    "main.a6299e4b54bcb458b330.js",
    15829,
    Object {
      "chunkhash": "a6299e4b54bcb458b330",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.a6299e4b54bcb458b330.js.gz",
      },
      "size": 15829,
    },
  ],
  Array [
    "main.a6299e4b54bcb458b330.js.gz",
    3957,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3957,
    },
  ],
]
`;

exports[`"deleteOriginalAssets" option should work and keep original assets: errors 1`] = `Array []`;

exports[`"deleteOriginalAssets" option should work and keep original assets: warnings 1`] = `Array []`;

exports[`"deleteOriginalAssets" option should work and report errors on duplicate assets: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js",
    133,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 133,
    },
  ],
  Array [
    "main.a6299e4b54bcb458b330.js",
    3957,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3957,
    },
  ],
]
`;

exports[`"deleteOriginalAssets" option should work and report errors on duplicate assets: errors 1`] = `
Array [
  "Error: Conflict: Multiple assets emit different content to the same filename 23fc1d3ac606d117e05a140e0de79806.svg",
  "Error: Conflict: Multiple assets emit different content to the same filename async.async.9325220d444b0d653c03.js",
  "Error: Conflict: Multiple assets emit different content to the same filename main.a6299e4b54bcb458b330.js",
]
`;

exports[`"deleteOriginalAssets" option should work and report errors on duplicate assets: warnings 1`] = `Array []`;
